--- a/.env.template
+++ b/.env.template
@@ -12,3 +12,29 @@ TWITTER_ACCESS_TOKEN_SECRET=r9hrSVo6RJW23waFTZZ2MuWw6ojAc2dkbBZvwIob2IKh4
 # Configuration
 TWITTER_MAX_RESULTS=1000
 TWITTER_DAYS_BACK=7
+
+# Reddit API Configuration (Optional - for real sentiment analysis)
+REDDIT_CLIENT_ID=your_reddit_client_id_here
+REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
+
+# News API Configuration (Optional - for news sentiment)
+NEWS_API_KEY=your_news_api_key_here
+
+# Database Configuration
+DATABASE_URL=sqlite:///data/bitcoin_ml.db
+
+# Model Configuration
+MODEL_RETRAIN_INTERVAL_HOURS=24
+PREDICTION_CONFIDENCE_THRESHOLD=0.6
+
+# Real-time Data Configuration
+REALTIME_UPDATE_INTERVAL_SECONDS=10
+WEBSOCKET_RECONNECT_ATTEMPTS=5
+
+# Dashboard Configuration
+DASHBOARD_REFRESH_INTERVAL_SECONDS=30
+DASHBOARD_HISTORY_DAYS=30
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=logs/bitcoin_ml.log
