Fix Streamlit Cloud Deployment Errors
CRITICAL FIXES:
 Fixed st.set_option deprecation error - removed invalid config
 Fixed yfinance websockets dependency conflict - removed from requirements
 Fixed import errors - removed unused Path and sys imports
 Streamlined requirements.txt to core packages only

 WORKING REQUIREMENTS:
- streamlit (core)
- pandas, numpy (data)
- scikit-learn (ML)
- plotly (visualization)
- lightgbm, xgboost (models)
- joblib (serialization)

 CLEAN LAUNCH DASHBOARD:
- No dependency conflicts
- No deprecated Streamlit options
- Self-contained code
- Ready for Streamlit Cloud deployment

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,10 @@
-# Streamlit Cloud Configuration
-# This file configures the Streamlit Cloud deployment
+# Streamlit Configuration
+# Clean configuration without deprecated options
 
 [global]
 developmentMode = false
 
 [server]
-runOnSave = false
 port = 8501
 headless = true
 
@@ -20,12 +19,3 @@ textColor = "#262730"
 
 [logger]
 level = "info"
-
-[client]
-caching = true
-showErrorDetails = false
-
-[runner]
-magicEnabled = true
-installTracer = false
-fixMatplotlib = true
